--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
-    "start": "node dist/src/index.js",
+    "start": "node dist/src/Server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +17,8 @@
     "@types/socket.io-client": "^3.0.0",
     "express": "^4.17.3",
     "kafkajs": "^1.16.0",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.4",
     "reflect-metadata": "^0.1.13",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
     "tslint": "^6.1.3",
     "typescript": "^4.6.2"
   }
