--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.179",
     "@types/uuid": "^8.3.4",
+    "lodash": "^4.17.21",
     "tslint": "^6.1.3",
     "typescript": "^4.6.2"
   }
